FIX: z-index of body::after covering the game elements. Changed to -1

--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body::before {
   left: 0;
   opacity: .05;
   background-image: url('src/img/happy-face-3.png');
+  z-index: -1;
 }
 #main-wrapper {
   display: flex;
